# python-project-boilerplate

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_app.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
