[tool.poetry]
name = "python project boilerplate"
version = "0.1.0"
description = ""
authors = ["Janos Mezo <jmezo.asd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pre-commit = "^2.7.1"
pytest = "^6.1.1"
rope = "^0.18.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
